<resources>
    <string name="app_name">KindergartenApp</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="LoginBtnLabel">Login</string>
    <string name="tab_posts">Posts</string>
    <string name="tab_teachers">Teachers</string>
    <string name="tab_parents">Parents</string>
    <string name="tab_chidlren">Children</string>
    <string name="tab_children">Children</string>
    <string name="GroupTitle">Group</string>
    <string name="example_text">Something really important post. Lorem ipsum dolor sit amet, sa odio mauris justo. Luctus arcu, urna praesent at id quisque ac. Something really important post. Lorem ipsum dolor sit amet, sa odio mauris justo. Luctus arcu, urna praesent at id quisque ac.
                                Something really important post. Lorem ipsum dolor sit amet, sa odio mauris justo. Luctus arcu, urna praesent at id quisque ac. Something really important post. Lorem ipsum dolor sit amet, sa odio mauris justo. Luctus arcu, urna praesent at id quisque ac. </string>
    <string name="example_name">Full Name</string>
    <string name="LikeBtnLabel">Like</string>
    <string name="hint_comment">Your comment...</string>
    <string name="like_text">Already %d people liked it.</string>
    <string name="question">Szerintetek A vagy B?</string>
    <string name="example_answer">Legyen az A</string>
    <string name="main">Ez a nyitókép</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="navigation_drager_open">Open navigation drawer</string>
    <string name="navigation_drager_close">Close navigation drawer</string>
    <string name="messageBtn">New Message</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="new_message">New Message</string>
    <string name="hint_post">What\'s in your mind?</string>
    <string name="write_your_post">Write your post!</string>
    <string name="add_photo">Add Photo</string>
    <string name="your_question">What is your question?</string>
    <string name="add_option">Add Option</string>
    <string name="remove">Remove</string>
    <string name="add">Add option</string>
    <string name="your_poll">Write your poll!</string>
    <string name="hint_poll">What\'s your question?</string>
    <string name="post">Post</string>
    <string name="example">example</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_post">Make your map post!</string>
    <string name="add_marker">Add marker</string>
    <string name="marker_s_name">Marker\'s name</string>
    <string name="title_activity_place_picker">Map</string>
    <string name="send">send</string>
    <string name="magic">Press me</string>
</resources>
