<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/writePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_your_post"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_margin="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_post"
        android:layout_below="@+id/writePost"
        android:id="@+id/TextInputEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PostTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextInputEditText"
        android:id="@+id/buttons">

        <Button
            android:id="@+id/addPhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/postBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:layout_toRightOf="@+id/addPhotoBtn"
            android:layout_toEndOf="@+id/addPhotoBtn"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons">
    <ImageView
        android:id="@+id/photoPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPhotoBtn"/>
    </LinearLayout>

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>