<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/writePost"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:text="@string/map_post"
                android:textSize="24sp"
                android:gravity="center"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_post">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PollTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5" />

            </com.google.android.material.textfield.TextInputLayout>


            <AutoCompleteTextView
                android:id="@+id/textin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marker_s_name"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/addMarker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_marker"
                    android:layout_weight="1"
                    android:layout_margin="8dp"/>
                <Button
                    android:id="@+id/post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="post"
                    android:layout_weight="1"
                    android:layout_margin="8dp"/>
            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                tools:context=".MapsActivity" />

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</com.google.android.material.circularreveal.CircularRevealLinearLayout>